Thu Aug 12 01:35:46 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkiconview.c: Make the icon view accessible by
	implementing the necesssary ATK interfaces.  (#149728,
	Padraig O'Briain)

Thu Aug 12 00:02:29 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkaction.c (gtk_action_new): Link to information about
	allowed action names.  (#149620, David Malcolm)

Wed Aug 11 23:14:25 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtk.symbols: 
	* gtk/gtkaction.h:
	* gtk/gtkaction.c (gtk_action_set_sensitive): 
	(gtk_action_set_visible): Add setters for the ::sensitive
	and ::visible properties of GtkAction.  (#149622, David Malcolm)

2004-08-11  Federico Mena Quintero  <federico@ximian.com>

	Fix #149422, #143457:

	* gtk/gtkfilechooserdefault.c
	(gtk_file_chooser_default_should_respond): Rewrite to take the
	current focus into account, the contents of the save entry, and
	the last focus for the shortcuts list.
	(switch_to_selected_folder): We don't need an assertion on the
	action here.

Wed Aug 11 20:56:00 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkinternals.h: 
	* gtk/gtk.symbols: Add shortcuts_model_filter_get_type.

	* gtk/abicheck.sh: Check all symbols.

Wed Aug 11 19:20:34 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtktreeview.c (gtk_tree_view_maybe_begin_dragging_row): 
	Don't start a drag if the treeview is only a 
	drag destination.  (#149836, Pawel Salek)

2004-08-11  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtktreedatalist.[hc]: 
	* gtk/gtkliststore.c:
	* gtk/gtktreestore.c: Underscore-prefix 
	gtk_tree_data_list_compare_func. 

	* gtk/gtk.symbols: Remove gtk_tree_data_list_compare_func.

	* gtk/makegtkalias.pl: No need to include gtktreedatalist.h 
	any more.

2004-08-10  Matthias Clasen  <mclasen@redhat.com>

	* gdk/Makefile.am: 
	* gtk/Makefile.am: Define TESTS, not TEST, so that make check
	actually triggers abicheck.sh.

	* gdk/makegdkalias.pl: 
	* gtk/makegtkalias.pl: Include glib.h before using glib symbols. D'oh.
